--- a/app/globals.css
+++ b/app/globals.css
@@ -24,6 +24,15 @@ body{
 }
 
 
+.loginInput {
+  @apply h-[50px] w-full rr bg-gray-100 outline-none focus:border focus:border-orange-500 px-[10px];
+}
+
+.loginlabel {
+  @apply font-semibold text-[13px] text-gray-700;
+}
+
+
 
 
 
@@ -58,3 +67,17 @@ body{
 .button1{
   @apply h-[60px] rr uppercase text-[14px] bg-orange-500 text-white px-[20px] font-semibold;
 }
+
+
+.no-scrollbar::-webkit-scrollbar {
+  width: 3px;
+  height: 0;
+  
+}
+
+.no-scrollbar::-webkit-scrollbar-thumb {
+  background-color:#007c92;
+  border-radius: 5px;
+}
+
+
