--- a/app/output.css
+++ b/app/output.css
@@ -612,10 +612,6 @@ video {
   z-index: 20;
 }
 
-.z-30 {
-  z-index: 30;
-}
-
 .z-50 {
   z-index: 50;
 }
@@ -623,11 +619,6 @@ video {
 .mx-\[10px\] {
   margin-left: 10px;
   margin-right: 10px;
-}
-
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .mb-\[-20px\] {
@@ -650,10 +641,6 @@ video {
   margin-top: 1rem;
 }
 
-.mt-\[-100px\] {
-  margin-top: -100px;
-}
-
 .mt-\[-30px\] {
   margin-top: -30px;
 }
@@ -670,8 +657,20 @@ video {
   margin-top: 25px;
 }
 
+.mt-\[36px\] {
+  margin-top: 36px;
+}
+
+.mt-\[50px\] {
+  margin-top: 50px;
+}
+
 .mt-\[5px\] {
   margin-top: 5px;
+}
+
+.mt-\[4px\] {
+  margin-top: 4px;
 }
 
 .flex {
@@ -690,12 +689,12 @@ video {
   height: 100px;
 }
 
-.h-\[10vh\] {
-  height: 10vh;
-}
-
 .h-\[1150px\] {
   height: 1150px;
+}
+
+.h-\[130px\] {
+  height: 130px;
 }
 
 .h-\[150px\] {
@@ -716,6 +715,10 @@ video {
 
 .h-\[240px\] {
   height: 240px;
+}
+
+.h-\[250px\] {
+  height: 250px;
 }
 
 .h-\[270px\] {
@@ -754,6 +757,10 @@ video {
   height: 400px;
 }
 
+.h-\[40px\] {
+  height: 40px;
+}
+
 .h-\[45px\] {
   height: 45px;
 }
@@ -770,6 +777,10 @@ video {
   height: 50px;
 }
 
+.h-\[54px\] {
+  height: 54px;
+}
+
 .h-\[550px\] {
   height: 550px;
 }
@@ -782,10 +793,6 @@ video {
   height: 60%;
 }
 
-.h-\[600px\] {
-  height: 600px;
-}
-
 .h-\[60px\] {
   height: 60px;
 }
@@ -794,12 +801,12 @@ video {
   height: 750px;
 }
 
-.h-\[90\%\] {
-  height: 90%;
+.h-\[78vh\] {
+  height: 78vh;
 }
 
-.h-\[90vh\] {
-  height: 90vh;
+.h-\[90\%\] {
+  height: 90%;
 }
 
 .h-full {
@@ -810,8 +817,48 @@ video {
   height: 100vh;
 }
 
+.h-\[\] {
+  height: ;
+}
+
+.h-\[70px\] {
+  height: 70px;
+}
+
+.h-\[80px\] {
+  height: 80px;
+}
+
+.h-\[10px\] {
+  height: 10px;
+}
+
+.h-\[15px\] {
+  height: 15px;
+}
+
+.h-\[20px\] {
+  height: 20px;
+}
+
+.h-\[85px\] {
+  height: 85px;
+}
+
+.h-\[95px\] {
+  height: 95px;
+}
+
+.h-\[24px\] {
+  height: 24px;
+}
+
 .min-h-\[10vh\] {
   min-height: 10vh;
+}
+
+.w-\[100\%\] {
+  width: 100%;
 }
 
 .w-\[100vw\] {
@@ -822,16 +869,16 @@ video {
   width: 101%;
 }
 
+.w-\[110px\] {
+  width: 110px;
+}
+
 .w-\[15\%\] {
   width: 15%;
 }
 
 .w-\[150px\] {
   width: 150px;
-}
-
-.w-\[170px\] {
-  width: 170px;
 }
 
 .w-\[200px\] {
@@ -842,8 +889,16 @@ video {
   width: 20px;
 }
 
+.w-\[260px\] {
+  width: 260px;
+}
+
 .w-\[26vw\] {
   width: 26vw;
+}
+
+.w-\[30\.4\%\] {
+  width: 30.4%;
 }
 
 .w-\[35px\] {
@@ -852,6 +907,10 @@ video {
 
 .w-\[370px\] {
   width: 370px;
+}
+
+.w-\[45\%\] {
+  width: 45%;
 }
 
 .w-\[50\%\] {
@@ -894,6 +953,10 @@ video {
   width: 100vw;
 }
 
+.shrink-0 {
+  flex-shrink: 0;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
@@ -908,10 +971,6 @@ video {
 
 .flex-wrap {
   flex-wrap: wrap;
-}
-
-.items-start {
-  align-items: flex-start;
 }
 
 .items-center {
@@ -932,6 +991,10 @@ video {
 
 .justify-between {
   justify-content: space-between;
+}
+
+.gap-\[0px\] {
+  gap: 0px;
 }
 
 .gap-\[10px\] {
@@ -978,6 +1041,10 @@ video {
   gap: 5px;
 }
 
+.gap-\[6px\] {
+  gap: 6px;
+}
+
 .gap-\[70px\] {
   gap: 70px;
 }
@@ -998,12 +1065,12 @@ video {
   overflow: hidden;
 }
 
-.rounded {
-  border-radius: 0.25rem;
+.overflow-scroll {
+  overflow: scroll;
 }
 
-.rounded-\[5px\] {
-  border-radius: 5px;
+.rounded {
+  border-radius: 0.25rem;
 }
 
 .rounded-full {
@@ -1030,12 +1097,16 @@ video {
   border-bottom-width: 4px;
 }
 
-.border-r {
-  border-right-width: 1px;
-}
-
 .border-t {
   border-top-width: 1px;
+}
+
+.border-b {
+  border-bottom-width: 1px;
+}
+
+.border-b-\[2px\] {
+  border-bottom-width: 2px;
 }
 
 .border-gray-200 {
@@ -1051,6 +1122,11 @@ video {
 .border-orange-500 {
   --tw-border-opacity: 1;
   border-color: rgb(249 115 22 / var(--tw-border-opacity));
+}
+
+.border-sec {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 103 0 / var(--tw-border-opacity));
 }
 
 .bg-black {
@@ -1103,6 +1179,11 @@ video {
   background-color: rgb(23 23 23 / var(--tw-bg-opacity));
 }
 
+.bg-orange-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 237 213 / var(--tw-bg-opacity));
+}
+
 .bg-orange-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(249 115 22 / var(--tw-bg-opacity));
@@ -1113,9 +1194,9 @@ video {
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
-.bg-stone-50 {
+.bg-sec {
   --tw-bg-opacity: 1;
-  background-color: rgb(250 250 249 / var(--tw-bg-opacity));
+  background-color: rgb(255 103 0 / var(--tw-bg-opacity));
 }
 
 .bg-teal-300 {
@@ -1177,6 +1258,10 @@ video {
 
 .p-\[25px\] {
   padding: 25px;
+}
+
+.p-\[30px\] {
+  padding: 30px;
 }
 
 .p-\[40px\] {
@@ -1246,6 +1331,10 @@ video {
   padding-bottom: 40px;
 }
 
+.pb-\[50px\] {
+  padding-bottom: 50px;
+}
+
 .pt-\[40px\] {
   padding-top: 40px;
 }
@@ -1310,12 +1399,20 @@ video {
   font-size: 30px;
 }
 
+.text-\[33px\] {
+  font-size: 33px;
+}
+
 .text-\[35px\] {
   font-size: 35px;
 }
 
 .text-\[36px\] {
   font-size: 36px;
+}
+
+.text-\[17px\] {
+  font-size: 17px;
 }
 
 .font-bold {
@@ -1349,9 +1446,19 @@ video {
   color: rgb(30 64 175 / var(--tw-text-opacity));
 }
 
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
 .text-gray-700 {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+
+.text-gray-900 {
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 
 .text-neutral-200 {
@@ -1374,6 +1481,16 @@ video {
   color: rgb(249 115 22 / var(--tw-text-opacity));
 }
 
+.text-primary {
+  --tw-text-opacity: 1;
+  color: rgb(12 21 89 / var(--tw-text-opacity));
+}
+
+.text-sec {
+  --tw-text-opacity: 1;
+  color: rgb(255 103 0 / var(--tw-text-opacity));
+}
+
 .text-stone-200 {
   --tw-text-opacity: 1;
   color: rgb(231 229 228 / var(--tw-text-opacity));
@@ -1389,6 +1506,15 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-\[\] {
+  color: ;
+}
+
+.text-neutral-500 {
+  --tw-text-opacity: 1;
+  color: rgb(115 115 115 / var(--tw-text-opacity));
+}
+
 .underline-offset-\[3px\] {
   text-underline-offset: 3px;
 }
@@ -1402,6 +1528,12 @@ video {
 .shadow-md {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-sm {
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1428,6 +1560,11 @@ video {
 
 .brightness-\[44\%\] {
   --tw-brightness: brightness(44%);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.brightness-\[70\%\] {
+  --tw-brightness: brightness(70%);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
@@ -1513,6 +1650,31 @@ body{
   }
 }
 
+.loginInput {
+  height: 50px;
+  width: 100%;
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+  padding-left: 10px;
+  padding-right: 10px;
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+  border-radius: 5px;
+}
+
+.loginInput:focus {
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(249 115 22 / var(--tw-border-opacity));
+}
+
+.loginlabel {
+  font-size: 13px;
+  font-weight: 600;
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+
 .noSelect {
   -webkit-tap-highlight-color: transparent;
   -webkit-touch-callout: none;
@@ -1561,8 +1723,14 @@ body{
   border-radius: 5px;
 }
 
-.hover\:ml-\[10px\]:hover {
-  margin-left: 10px;
+.no-scrollbar::-webkit-scrollbar {
+  width: 3px;
+  height: 0;
+}
+
+.no-scrollbar::-webkit-scrollbar-thumb {
+  background-color:#007c92;
+  border-radius: 5px;
 }
 
 .hover\:bg-gray-600:hover {
@@ -1575,6 +1743,11 @@ body{
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-sec2:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(163 109 72 / var(--tw-bg-opacity));
+}
+
 .hover\:text-blue-600:hover {
   --tw-text-opacity: 1;
   color: rgb(37 99 235 / var(--tw-text-opacity));
@@ -1583,6 +1756,16 @@ body{
 .hover\:text-orange-500:hover {
   --tw-text-opacity: 1;
   color: rgb(249 115 22 / var(--tw-text-opacity));
+}
+
+.hover\:text-sec:hover {
+  --tw-text-opacity: 1;
+  color: rgb(255 103 0 / var(--tw-text-opacity));
+}
+
+.hover\:text-sec2:hover {
+  --tw-text-opacity: 1;
+  color: rgb(163 109 72 / var(--tw-text-opacity));
 }
 
 .hover\:underline:hover {
@@ -1638,6 +1821,10 @@ body{
     margin-bottom: 5px;
   }
 
+  .lg\:mt-\[0\] {
+    margin-top: 0;
+  }
+
   .lg\:mt-\[30px\] {
     margin-top: 30px;
   }
@@ -1660,6 +1847,10 @@ body{
 
   .lg\:h-\[100vh\] {
     height: 100vh;
+  }
+
+  .lg\:h-\[13\%\] {
+    height: 13%;
   }
 
   .lg\:h-\[250px\] {
@@ -1686,6 +1877,10 @@ body{
     height: 700px;
   }
 
+  .lg\:h-\[74\%\] {
+    height: 74%;
+  }
+
   .lg\:h-\[90vh\] {
     height: 90vh;
   }
@@ -1694,8 +1889,12 @@ body{
     height: 92vh;
   }
 
-  .lg\:w-\[13vw\] {
-    width: 13vw;
+  .lg\:h-full {
+    height: 100%;
+  }
+
+  .lg\:h-screen {
+    height: 100vh;
   }
 
   .lg\:w-\[20\%\] {
@@ -1726,16 +1925,16 @@ body{
     width: 40%;
   }
 
-  .lg\:w-\[400px\] {
-    width: 400px;
-  }
-
   .lg\:w-\[50\%\] {
     width: 50%;
   }
 
   .lg\:w-\[60\%\] {
     width: 60%;
+  }
+
+  .lg\:w-\[70\%\] {
+    width: 70%;
   }
 
   .lg\:w-\[79vw\] {
@@ -1836,6 +2035,10 @@ body{
     padding-top: 100px;
   }
 
+  .lg\:text-left {
+    text-align: left;
+  }
+
   .lg\:text-center {
     text-align: center;
   }
@@ -1848,3 +2051,5 @@ body{
     line-height: 45px;
   }
 }
+
+
